KUBE-CONFIG/conv-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: conv-api-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      components: api
  template:
    metadata:
      name: conv-api
      labels:
        components: api
    spec:
      containers:
        - name: conv-api
          image:  antonlarichev/conv-api:1.0
          ports: 
            - containerPort: 3000
          resources:
            limits:
              memory: "512Mi"
              cpu: "200m"
          volumeMounts:
            - name: conv-api-pv
              mountPath: /opt/app/uploads
      volumes:
        - name: conv-api-pv
          persistentVolumeClaim:
            claimName: conv-api-pvc
