KUBE-CONFIG/conv-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: conv-service-deployment
spec:
  replicas: 4
  selector:
    matchLabels:
      components: service
  template:
    metadata:
      name: conv-service
      labels:
        components: service
    spec:
      containers:
        - name: conv-service
          image:  antonlarichev/conv-service:1.0
          ports: 
            - containerPort: 4000
          resources:
            limits:
              memory: "512Mi"
              cpu: "100m"
