KUBE-CONFIG/conv-rmq-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: conv-rmq-clusterip
spec:
  type: ClusterIP
  ports:
    - port: 15672
      protocol: TCP
  selector:
    components: backend
